--- a/client/styles/pages/home.module.css
+++ b/client/styles/pages/home.module.css
@@ -4,7 +4,6 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - var(--nav-height));
   justify-content: center;
 }
 
@@ -22,31 +21,38 @@
 }
 
 .intro {
-  padding: 3rem 0 0 5rem;
-  text-align: center;
+  padding: 2rem 0 0 5rem;
 }
 
-.h1 {
+.title {
   font-family: var(--font-display);
   font-size: 8rem;
   height: 10.5rem;
-  margin: 0;
-  padding: 0.5rem 0 0 0;
-}
-
-.h2 {
-  font-family: var(--font-condensed);
-  font-size: 2.4rem;
-  font-weight: 300;
+  letter-spacing: normal;
   margin: 0;
   padding: 0;
 }
 
+.slogan {
+  font-family: var(--font-condensed);
+  font-size: 2.8rem;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+  text-align: justify;
+}
+
 .actions {
-  display: block;
+  background-color: var(--color-lightest);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: var(--nav-height);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0 auto;
-  padding: 5rem 0 0;
-  position: relative;
+  position: fixed;
   max-width: 80rem;
   text-align: center;
   width: 100%;
@@ -63,11 +69,11 @@
     max-width: 65%;
   }
 
-  .h1 {
+  .title {
     font-size: 6rem;
   }
 
-  .h2 {
+  .slogan {
     font-size: 2rem;
   }
 
