--- a/client/styles/pages/home.module.css
+++ b/client/styles/pages/home.module.css
@@ -35,7 +35,7 @@
 
 .slogan {
   font-family: var(--font-condensed);
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   font-weight: 500;
   margin: 0;
   padding: 0;
@@ -43,7 +43,6 @@
 }
 
 .actions {
-  background-color: var(--color-lightest);
   bottom: 0;
   left: 0;
   right: 0;
@@ -53,9 +52,13 @@
   justify-content: center;
   margin: 0 auto;
   position: fixed;
-  max-width: 80rem;
   text-align: center;
   width: 100%;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 80rem;
 }
 
 @media (max-width: 768px) {
