--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -24,12 +24,12 @@
   --color-ocean: #34538c;
   --color-sailboat: #4771bf;
 
-  --font-body: 'Open Sans', sans-serif;
-  --font-condensed: 'Open Sans Condensed', sans-serif;
+  --font-body: 'Roboto', sans-serif;
+  --font-condensed: 'Roboto Condensed', sans-serif;
   --font-display: 'Rousseau Deco';
   --font-aside: 'Mate SC', serif;
 
-  --nav-height: 10rem;
+  --nav-height: 6.25rem;
 }
 
 @font-face {
@@ -40,8 +40,6 @@
   font-display: block;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Mate+SC&family=Open+Sans+Condensed:wght@300;700&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -50,7 +48,6 @@ html,
 body {
   color: var(--color-black);
   font-family: var(--font-body);
-  font-size: 10px;
   padding: 0;
   margin: 0;
 }
@@ -74,15 +71,14 @@ h2 {
 }
 
 h1 {
-  font-size: 3.6rem;
+  font-size: 2rem;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 1.5rem;
 }
 
 p {
-  font-size: 1.8rem;
   line-height: 1.65;
 }
 
@@ -92,7 +88,7 @@ a {
 }
 
 main {
-  padding: 10rem 0 0;
+  padding: 5rem 0 0;
   position: relative;
   z-index: 5;
 }
@@ -110,7 +106,7 @@ main {
   display: flex;
   height: var(--nav-height);
   left: 0;
-  padding: 0 10%;
+  padding: 0 2rem;
   position: fixed;
   right: 0;
   top: 0;
@@ -122,11 +118,11 @@ main {
   border: none;
   cursor: pointer;
   display: block;
-  height: 5rem;
+  height: 3.5rem;
   margin: 0;
-  padding: 1rem;
+  padding: 0.875rem;
   transition: background-color 0.25s;
-  width: 5rem;
+  width: 3.5rem;
 }
 
 .hamburger svg {
