--- a/client/styles/modules/auth.module.css
+++ b/client/styles/modules/auth.module.css
@@ -15,6 +15,7 @@
   box-shadow: 0 0 10vw rgba(0, 0, 0, 0.45), 2rem 2rem 0 rgba(0, 0, 0, 0.05), -2rem -2rem 0 rgba(0, 0, 0, 0.05);
   display: flex;
   flex-flow: column;
+  max-width: 60rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -22,7 +23,12 @@
   z-index: 900;
 }
 
-.h2 {
+.title {
+  font-family: var(--font-display);
+  font-size: 2rem;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
   text-transform: uppercase;
 }
 
@@ -31,7 +37,7 @@
   flex-flow: row wrap;
   justify-content: space-between;
   max-width: 100rem;
-  padding: 4rem;
+  padding: 2rem;
   width: 100%;
 }
 
@@ -47,26 +53,26 @@
 .license {
   background: var(--color-lighter);
   border: 1px solid var(--color-lighter);
-  border-radius: 1rem;
+  border-radius: 0.75rem;
   width: 100%;
 }
 
 .header {
   align-items: baseline;
-  border-bottom: 1px solid var(--color-light);
+  border-bottom: 1px solid var(--color-haze);
   display: flex;
   flex-flow: row nowrap;
   line-height: 1;
   justify-content: space-between;
   margin: 0;
-  padding: 2rem 2rem 1.2rem;
+  padding: 1rem 1rem 0.75rem;
 }
 
 .state {
   color: var(--color-sailboat);
   display: block;
   font-family: var(--font-aside);
-  font-size: 2rem;
+  font-size: 1.25rem;
   font-weight: 600;
   letter-spacing: 0.2rem;
   padding: 0 0 0.4rem 0;
@@ -78,28 +84,31 @@
   display: block;
   font-family: var(--font-body);
   font-weight: 600;
-  font-size: 1.4rem;
+  font-size: 1rem;
 }
 
 .info {
-  padding: 1rem 2rem 2.5rem;
+  padding: 0.5rem 1rem 1.5rem;
 }
 
 .num,
 .dob,
 .exp {
-  color: var(--color-dark);
-  display: block;
-  font-size: 1.8rem;
+  color: var(--color-darker);
+  display: flex;
+  flex-flow: row nowrap;
+  font-size: 1rem;
   font-weight: 600;
+  justify-content: space-between;
   letter-spacing: 0.4rem;
   line-height: 1;
-  padding: 1.5rem 0 0;
+  padding: 0.75rem 0 0;
+  width: 100%;
 }
 
 .num {
   color: var(--color-black);
-  font-size: 2.6rem;
+  font-size: 1.5rem;
   padding-bottom: 1rem;
 }
 
@@ -107,7 +116,7 @@
 .exp strong {
   display: inline-block;
   font-family: monospace;
-  text-align: justify;
+  letter-spacing: 0.1rem;
   width: 8rem;
 }
 
@@ -119,11 +128,10 @@
 .container {
   align-items: center;
   display: flex;
-  height: 10rem;
+  height: var(--nav-height);
   justify-content: space-between;
-  margin: 0 auto;
-  max-width: 100rem;
-  padding: 0 4rem;
+  padding: 0 2rem;
+  width: 100%;
 }
 
 @media (max-width: 800px) {
@@ -151,12 +159,12 @@
 
   .columns {
     flex-direction: column;
-    padding: 4rem;
+    padding: 2rem;
   }
 
   .left,
   .right {
-    padding: 2rem 0;
+    padding: 1rem 0;
     width: 100%;
   }
 
