--- a/client/styles/pages/home.module.css
+++ b/client/styles/pages/home.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 10rem;
 }
 
 .brand {
@@ -17,18 +18,18 @@
 }
 
 .logo {
-  max-width: 25rem;
+  max-width: 22rem;
 }
 
 .intro {
-  padding: 2rem 0 0 5rem;
+  padding: 1rem 0 0 3rem;
 }
 
 .title {
   font-family: var(--font-display);
   font-size: 8rem;
-  height: 10.5rem;
   letter-spacing: normal;
+  height: 10rem;
   margin: 0;
   padding: 0;
 }
@@ -61,6 +62,29 @@
   max-width: 80rem;
 }
 
+@media (max-width: 800px) {
+  .main {
+    padding: 8rem 0;
+  }
+
+  .logo {
+    max-width: 13rem;
+  }
+
+  .intro {
+    padding: 0 0 0 1rem;
+  }
+
+  .title {
+    font-size: 4.8rem;
+    height: 7rem;
+  }
+
+  .slogan {
+    font-size: 1.5rem;
+  }
+}
+
 @media (max-width: 768px) {
   .brand {
     flex-direction: column;
@@ -70,14 +94,6 @@
   .logo {
     margin-top: 8rem;
     max-width: 65%;
-  }
-
-  .title {
-    font-size: 6rem;
-  }
-
-  .slogan {
-    font-size: 2rem;
   }
 
   .intro {
