Adding in optional dependencies and getting ready for OCR

--- a/client/styles/pages/home.module.css
+++ b/client/styles/pages/home.module.css
@@ -62,7 +62,7 @@
   max-width: 80rem;
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 1000px) {
+@media (max-width: 1200px) {
   .main {
     padding: 8rem 0 0;
   }
