--- a/client/styles/pages/home.module.css
+++ b/client/styles/pages/home.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100vh;
   justify-content: center;
-  padding: 10rem;
 }
 
 .brand {
@@ -14,6 +14,7 @@
   flex-flow: row wrap;
   justify-content: center;
   max-width: 80rem;
+  padding: 0 0 2rem;
   width: 100%;
 }
 
@@ -47,26 +48,21 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: var(--nav-height);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
   position: fixed;
-  text-align: center;
   width: 100%;
 }
 
 .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: var(--nav-height);
   margin: 0 auto;
-  max-width: 80rem;
+  padding: 0 var(--spacing-500);
+  width: 100%;
 }
 
-@media (max-width: 1200px) {
-  .main {
-    padding: 8rem 0 0;
-  }
-
+@media (max-width: 800px) {
   .logo {
     max-width: 10rem;
   }
